# FPGA_Hasher

./: LICENSE  README.md
measurements/: CMakeLists.txt  strings.txt
measurements/src/: bench.cpp
rtl/: FPGA_Hasher.v  FPGA_Hasher.v.bak  uart_rx.v  uart_tx.v
src/: top_module.v  uart_rx.v  uart_top.v  uart_tx.v
